Collapse navbar fix

--- a/assets/css/Navigation-Clean.css
+++ b/assets/css/Navigation-Clean.css
@@ -9,6 +9,12 @@
   background: #27282d73;
 }
 
+@media (min-width: 992px) {
+  .navigation-clean {
+    max-height: 100px;
+  }
+}
+
 @media (min-width:768px) {
   .navigation-clean {
     padding-top: 1rem;
@@ -78,24 +84,12 @@
 }
 
 .navigation-clean.navbar .navbar-nav .nav-link {
-  padding-left: 18px;
-  padding-right: 18px;
-}
-
-.navigation-clean.navbar-light .navbar-nav .nav-link {
   color: #a298f6ff;
 }
 
 .navigation-clean.navbar-light .navbar-nav .nav-link:focus, .navigation-clean.navbar-light .navbar-nav .nav-link:hover {
   background-color: transparent;
   text-shadow: 0px 0px 10px #5026a0ff;
-}
-
-.navigation-clean .navbar-nav > li > .dropdown-menu {
-  margin-top: -5px;
-  box-shadow: none;
-  background-color: #fff;
-  border-radius: 2px;
 }
 
 @media (min-width:768px) {
