--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -123,3 +123,9 @@ a:hover .icon {
   box-shadow: 0px 0px 10px 2px #258abc;
 }
 
+@media (max-width: 768px) {
+  .nav.navbar-nav.ml-auto {
+    margin-top: 20px;
+  }
+}
+
